--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
         <meta name="theme-color" content="#000000" />
         <meta
         name="description"
-        content="Web site created using create-react-app"
+        content="Spontaneous Worship Playlist by Evang. Lawrence Oyor."
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-        <title>Music Player</title>
+        <title>Davidic App</title>
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <noscript>Spontaneous Worship Playlist by Evang. Lawrence Oyor.</noscript>
         <div id="root"></div>
 
     </body>
